# ollama_function_calling

./: README.md  pyproject.toml
ollama_function_calling/: main.py
tests/: test_main.py
