[tool.poetry]
name = "ollama-function-calling"
version = "0.1.0"
description = ""
authors = ["Tedfulk <teddyfulk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
ollama = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.8"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
